@startuml
package Presentation {
    class MainWindow
    class CanvasView
    class Toolbar
    class StylePanel
    class SessionDialog
    class UserListPanel

    MainWindow o-- CanvasView
    MainWindow o-- Toolbar
    MainWindow o-- StylePanel
    MainWindow o-- SessionDialog
    MainWindow o-- UserListPanel
}

package ApplicationLogic {
    class WhiteboardController
    class SessionController
    class CommandManager
    class SyncManager

    WhiteboardController o-- CommandManager
    WhiteboardController o-- SyncManager
    SessionController o-- SyncManager
}

package Networking {
    class NetworkService
    SyncManager o-- NetworkService
}

package Data {
    class WhiteboardModel
    class WhiteboardElement
    class TextItem
    class ShapeItem
    class DrawingItem
    class ImageItem
    class User
    class Session

    WhiteboardModel o-- "*" WhiteboardElement
    WhiteboardElement <|-- TextItem
    WhiteboardElement <|-- ShapeItem
    WhiteboardElement <|-- DrawingItem
    WhiteboardElement <|-- ImageItem

    Session o-- "*" User
}

' Inter-package connections
MainWindow --> WhiteboardController
MainWindow --> SessionController

CanvasView --> WhiteboardElement
StylePanel --> WhiteboardController
Toolbar --> WhiteboardController
UserListPanel --> SessionController
SessionDialog --> SessionController

WhiteboardController --> WhiteboardModel
SessionController --> Session
@enduml